--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <section id ="photos">
   <div id="images">
     <h2 class = "text">Achievement Photos</h2>
-    <img class ="price1"src="images/1price.jpg" alt="1st price photo">
+    <img class ="price1"src="images/1price.JPG" alt="1st price photo">
     <img class="image2"src="images/2image.jpg" alt="2image">
     <img class="image3"src="images/image3.jpg" alt="3image">
     <img class="image4"src="images/image4.png"alt="4image">
